mariadb-cluster: define a modern chart UI

--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -9,20 +9,20 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{- if .Values.mariadbRootPassword }}
-  mariadb-root-password: "{{ .Values.mariadbRootPassword | b64enc }}"
+  {{- if .Values.root.password }}
+  mariadb-root-password: "{{ .Values.root.password | b64enc }}"
   {{- else }}
   mariadb-root-password: "{{ randAlphaNum 10 | b64enc }}"
   {{- end }}
-  {{- if .Values.mariadbUser }}
-  {{- if .Values.mariadbPassword }}
-  mariadb-password: "{{ .Values.mariadbPassword | b64enc }}"
+  {{- if .Values.db.user }}
+  {{- if .Values.db.password }}
+  mariadb-password: "{{ .Values.db.password | b64enc }}"
   {{- else }}
   mariadb-password: "{{ randAlphaNum 10 | b64enc }}"
   {{- end }}
   {{- end }}
-  {{- if .Values.mariadbReplicationPassword }}
-  mariadb-replication-password: "{{ .Values.mariadbReplicationPassword | b64enc }}"
+  {{- if .Values.replication.password }}
+  mariadb-replication-password: "{{ .Values.replication.password | b64enc }}"
   {{- else }}
   mariadb-replication-password: "{{ randAlphaNum 10 | b64enc }}"
   {{- end }}
