--- a/incubator/mariadb-cluster/values.yaml
+++ b/incubator/mariadb-cluster/values.yaml
@@ -1,79 +1,82 @@
-## Bitnami MariaDB image version
-## ref: https://hub.docker.com/r/bitnami/mariadb/tags/
-##
-## Default: none
-image: bitnami/mariadb:10.1.28-r2
+## Bitnami MariaDB image
+image:
+  name: bitnami/mariadb
+  tag: 10.1.28-r2
+  pullPolicy: IfNotPresent
 
-## Image pull policy
-## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-##
-imagePullPolicy: IfNotPresent
+service:
+  ## Kubernetes service type
+  type: ClusterIP
+  port: 3306
 
-## Kubernetes service type
-serviceType: ClusterIP
-
-## Desired number of slave Pods
-##
-minSlaves: 1
-maxSlaves: 5
-
-antiAffinity: "soft"
-
-## MariaDB admin password
-## ref: https://github.com/bitnami/bitnami-docker-mariadb#setting-the-root-password-on-first-run
-##
-# mariadbRootPassword:
-
-## MariaDB user
-## ref: https://github.com/bitnami/bitnami-docker-mariadb#creating-a-database-user-on-first-run
-##
-# mariadbUser:
-
-## MariaDB password
-## ref: https://github.com/bitnami/bitnami-docker-mariadb#creating-a-database-user-on-first-run
-##
-# mariadbPassword:
-
-## Database to create
-## ref: https://github.com/bitnami/bitnami-docker-mariadb#creating-a-database-on-first-run
-##
-mariadbDatabase: my_database
-
-## MariaDB replication user
-## ref: https://github.com/bitnami/bitnami-docker-mariadb#setting-up-a-replication-cluster
-##
-mariadbReplicationUser: my_replication_user
-
-## MariaDB replication user password
-## ref: https://github.com/bitnami/bitnami-docker-mariadb#setting-up-a-replication-cluster
-##
-# mariadbReplicationPassword:
-
-## Enable persistence using Persistent Volume Claims
-## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
-##
-persistence:
-  ## If true, use a Persistent Volume Claim, If false, use emptyDir
+root:
+  ## MariaDB admin password
+  ## ref: https://github.com/bitnami/bitnami-docker-mariadb#setting-the-root-password-on-first-run
   ##
-  enabled: true
+  password:
 
-  ## Persistent Volume Claim annotations
+db:
+  ## MariaDB username and password
+  ## ref: https://github.com/bitnami/bitnami-docker-mariadb#creating-a-database-user-on-first-run
   ##
-  annotations:
-
-  ## Persistent Volume Storage Class
-  ## If defined, storageClassName: <storageClass>
-  ## If set to "-", storageClassName: "", which disables dynamic provisioning
-  ## If undefined (the default) or set to null, no storageClassName spec is
-  ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
-  ##   GKE, AWS & OpenStack)
+  user:
+  password:
+  ## Database to create
+  ## ref: https://github.com/bitnami/bitnami-docker-mariadb#creating-a-database-on-first-run
   ##
-  # storageClass: "-"
+  name: my_database
 
-  ## Persistent Volume Access Mode
-  accessModes:
-  - ReadWriteOnce
-
-  ## Persistent Volume size
+replication:
+  ## MariaDB replication user
+  ## ref: https://github.com/bitnami/bitnami-docker-mariadb#setting-up-a-replication-cluster
   ##
-  size: 8Gi
+  user: replicator
+  ## MariaDB replication user password
+  ## ref: https://github.com/bitnami/bitnami-docker-mariadb#setting-up-a-replication-cluster
+  ##
+  password:
+
+master:
+  antiAffinity: soft
+  ## Enable persistence using Persistent Volume Claims
+  ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
+  ##
+  persistence:
+    ## If true, use a Persistent Volume Claim, If false, use emptyDir
+    ##
+    enabled: true
+    ## Persistent Volume Storage Class
+    ## If defined, storageClassName: <storageClass>
+    ## If set to "-", storageClassName: "", which disables dynamic provisioning
+    ## If undefined (the default) or set to null, no storageClassName spec is
+    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+    ##   GKE, AWS & OpenStack)
+    ##
+    # storageClass: "-"
+    ## Persistent Volume Claim annotations
+    ##
+    annotations:
+    ## Persistent Volume Access Mode
+    ##
+    accessModes:
+    - ReadWriteOnce
+    ## Persistent Volume size
+    ##
+    size: 8Gi
+  ## Configure master resource requests and limits
+  ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+  ##
+  resources: {}
+
+slave:
+  replicas: 1
+  antiAffinity: soft
+  hpa:
+    min: 1
+    max: 3
+    target:
+      cpuPercentage: 75
+  ## Configure slave resource requests and limits
+  ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+  ##
+  resources: {}
