--- a/incubator/mariadb-cluster/templates/master-deploy.yaml
+++ b/incubator/mariadb-cluster/templates/master-deploy.yaml
@@ -20,7 +20,7 @@ spec:
       securityContext:
         runAsUser: 1001
         fsGroup: 1001
-      {{- if eq .Values.antiAffinity "hard" }}
+      {{- if eq .Values.master.antiAffinity "hard" }}
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -29,7 +29,7 @@ spec:
                 matchLabels:
                   app: "{{ template "name" . }}"
                   release: "{{ .Release.Name }}"
-      {{- else if eq .Values.antiAffinity "soft" }}
+      {{- else if eq .Values.master.antiAffinity "soft" }}
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
@@ -43,17 +43,17 @@ spec:
       {{- end }}
       containers:
       - name: "mariadb"
-        image: "{{ .Values.image }}"
-        imagePullPolicy: "{{ .Values.imagePullPolicy }}"
+        image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        imagePullPolicy: "{{ .Values.image.pullPolicy }}"
         env:
         - name: MARIADB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ template "fullname" . }}
               key: mariadb-root-password
-        {{- if .Values.mariadbUser }}
+        {{- if .Values.db.user }}
         - name: MARIADB_USER
-          value: "{{ .Values.mariadbUser }}"
+          value: "{{ .Values.db.user }}"
         - name: MARIADB_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -61,11 +61,11 @@ spec:
               key: mariadb-password
         {{- end }}
         - name: MARIADB_DATABASE
-          value: "{{ .Values.mariadbDatabase }}"
+          value: "{{ .Values.db.name }}"
         - name: MARIADB_REPLICATION_MODE
           value: "master"
         - name: MARIADB_REPLICATION_USER
-          value: "{{ .Values.mariadbReplicationUser }}"
+          value: "{{ .Values.replication.user }}"
         - name: MARIADB_REPLICATION_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -83,13 +83,13 @@ spec:
             command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
           initialDelaySeconds: 15
         resources:
-{{ toYaml .Values.resources | indent 10 }}
+{{ toYaml .Values.master.resources | indent 10 }}
         volumeMounts:
         - name: data
           mountPath: /bitnami
       volumes:
       - name: data
-      {{- if .Values.persistence.enabled }}
+      {{- if .Values.master.persistence.enabled }}
         persistentVolumeClaim:
           claimName: {{ template "master.fullname" . }}-data
       {{- else }}
