--- a/incubator/mariadb-cluster/templates/master-pvc.yaml
+++ b/incubator/mariadb-cluster/templates/master-pvc.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.persistence.enabled }}
+{{- if .Values.master.persistence.enabled }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -8,21 +8,21 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
-{{- if .Values.persistence.annotations }}
+{{- if .Values.master.persistence.annotations }}
   annotations:
-{{ toYaml .Values.persistence.annotations | indent 2 }}
+{{ toYaml .Values.master.persistence.annotations | indent 2 }}
 {{- end }}
 spec:
   accessModes:
-{{ toYaml .Values.persistence.accessModes | indent 2 }}
+{{ toYaml .Values.master.persistence.accessModes | indent 2 }}
   resources:
     requests:
-      storage: "{{ .Values.persistence.size }}"
-{{- if .Values.persistence.storageClass }}
-{{- if (eq "-" .Values.persistence.storageClass) }}
+      storage: "{{ .Values.master.persistence.size }}"
+{{- if .Values.master.persistence.storageClass }}
+{{- if (eq "-" .Values.master.persistence.storageClass) }}
   storageClassName: ""
 {{- else }}
-  storageClassName: "{{ .Values.persistence.storageClass }}"
+  storageClassName: "{{ .Values.master.persistence.storageClass }}"
 {{- end }}
 {{- end }}
 {{- end }}
