--- a/incubator/mariadb-cluster/templates/slave-svc.yaml
+++ b/incubator/mariadb-cluster/templates/slave-svc.yaml
@@ -7,12 +7,21 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+{{- if .Values.metrics.enabled }}
+  annotations:
+{{ toYaml .Values.metrics.annotations | indent 4 }}
+{{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
   - name: mysql
     port: {{ .Values.service.port }}
     targetPort: mysql
+{{- if .Values.metrics.enabled }}
+  - name: metrics
+    port: 9104
+    targetPort: metrics
+{{- end }}
   selector:
     app: "{{ template "name" . }}"
     component: "slave"
