--- a/incubator/node/values.yaml
+++ b/incubator/node/values.yaml
@@ -60,9 +60,9 @@ externalDatabase:
 ## All of these values are only used when mariadb.enabled is set to false
   azure:
     enabled: false
-    ## The Azure region in which to deploy Azure Cosmos MongoDB
+    ## The Azure region in which to deploy Azure CosmosDB MongoDB
     location: eastus
-    ## The plan to request for Azure Cosmos MongoDB
+    ## The plan to request for Azure CosmosDB MongoDB
     servicePlan: mongo-db
 
 ## Configure ingress resource that allow you to access the application. 
