--- a/incubator/mean/requirements.yaml
+++ b/incubator/mean/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
 - name: mongodb
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: https://charts.bitnami.com/stable
   version: 0.4.x
