--- a/stable/magento/requirements.yaml
+++ b/stable/magento/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: mariadb
-  version: 2.1.2
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  version: 2.1.5
+  repository: https://charts.bitnami.com/stable
   condition: mariadb.enabled
