--- a/stable/parse/requirements.yaml
+++ b/stable/parse/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
 - name: mongodb
-  version: 0.4.15
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  version: 0.4.x
+  repository: https://charts.bitnami.com/stable
