--- a/stable/sugarcrm/requirements.yaml
+++ b/stable/sugarcrm/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
 - name: mariadb
-  version: 0.7.0
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  version: 2.1.5
+  repository: https://charts.bitnami.com/stable
