--- a/incubator/nginx/values.yaml
+++ b/incubator/nginx/values.yaml
@@ -1,7 +1,7 @@
 ## Bitnami NGINX image version
 ## ref: https://hub.docker.com/r/bitnami/nginx/tags/
 ##
-imageTag: 1.10.2-r3
+image: bitnami/nginx:1.10.2-r3
 
 ## Specify a imagePullPolicy
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
