--- a/incubator/apache/templates/deployment.yaml
+++ b/incubator/apache/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: {{ template "fullname" . }}
-        image: "bitnami/apache:{{ .Values.imageTag }}"
+        image: "{{ .Values.image }}"
         imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         ports:
         - name: http
