Add option to disable redis commands

--- a/stable/redis/templates/deployment.yaml
+++ b/stable/redis/templates/deployment.yaml
@@ -52,6 +52,8 @@ spec:
         - name: ALLOW_EMPTY_PASSWORD
           value: "yes"
         {{- end }}
+        - name: REDIS_DISABLE_COMMANDS
+          value: {{ .Values.redisDisableCommands }}
         ports:
         - name: redis
           containerPort: 6379
