--- a/stable/redis/values.yaml
+++ b/stable/redis/values.yaml
@@ -35,6 +35,13 @@ usePassword: true
 ##  - "--maxmemory-policy volatile-ttl"
 args:
 
+## Comma-separated list of Redis commands to disable
+##
+## Can be used to disable Redis commands for security reasons.
+## ref: https://github.com/bitnami/bitnami-docker-redis#disabling-redis-commands
+##
+redisDisableCommands: "FLUSHDB,FLUSHALL"
+
 ## Enable persistence using Persistent Volume Claims
 ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
 ##
