[prestahsop, suitecrm, sugarcrm] Update deprectated annotation

--- a/stable/suitecrm/templates/svc.yaml
+++ b/stable/suitecrm/templates/svc.yaml
@@ -13,6 +13,7 @@ spec:
   type: {{ .Values.serviceType }}
   {{- if eq .Values.serviceType "LoadBalancer" }}
   loadBalancerIP: {{ .Values.suitecrmLoadBalancerIP }}
+  externalTrafficPolicy: Local
   {{- end }}
   ports:
   - name: http
