--- a/incubator/mariadb-cluster/values.yaml
+++ b/incubator/mariadb-cluster/values.yaml
@@ -76,6 +76,14 @@ master:
     ## Persistent Volume size
     ##
     size: 8Gi
+  ## Configure MySQL with a custom my.cnf file
+  ## ref: https://mysql.com/kb/en/mysql/configuring-mysql-with-mycnf/#example-of-configuration-file
+  ##
+  ## config: |-
+    ## [mysqld]
+    ## skip-name-resolve
+    ##
+
   ## Configure master resource requests and limits
   ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
   ##
