Consul Helm chart

--- a/incubator/consul/templates/gossip-secret.yaml
+++ b/incubator/consul/templates/gossip-secret.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.encryptGossip}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,8 +10,5 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{ if .Values.GossipKey }}
-  gossip-key: {{ .Values.GossipKey | b64enc }}
-  {{ else }}
-  gossip-key: {{ randAlphaNum 24 | b64enc }}
-  {{ end }}
+  gossip-key: {{ .Values.gossipKey | b64enc }}
+{{ end }}
