Improve Consul Helm chart

--- a/incubator/consul/templates/consul-configmap.yaml
+++ b/incubator/consul/templates/consul-configmap.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.configmap }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,24 +9,12 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 data:
-  config.json: | 
+  config.json: 
+  {{ toYaml .Values.configmap | indent 4}}
+
+  connection.json: | 
     {
-    "datacenter":"dc1",
-    "domain":"consul",
-    "data_dir":"/opt/bitnami/consul/data",
-    "pid_file":"/opt/bitnami/consul/tmp/consul.pid",
-    "server":true,
-    "ui":true,
-    "bootstrap_expect":3,
-    "addresses": {
-        "http":"0.0.0.0"
-    },
-    "retry_join": ["{{ template "consul.fullname" . }}-0.{{ template "consul.fullname" . }}.{{ .Release.Namespace }}.svc"],
-    "ports": {
-        "http":8500,
-        "dns":8600,
-        "serf_lan":8301,
-        "server":8300
-    },
-    "serf_lan":"0.0.0.0"
+      "retry_join": ["{{ template "consul.fullname" . }}-0.{{ template "consul.fullname" . }}.{{ .Release.Namespace }}.svc"]
     }
+
+{{ end }}
