--- a/incubator/consul/values.yaml
+++ b/incubator/consul/values.yaml
@@ -12,7 +12,7 @@ registry: dbarranco
 ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
-imagePullPolicy: Always
+imagePullPolicy: IfNotPresent
 
 ## Kubernetes service type
 serviceType: ClusterIP
